Add wdt initial version

--- a/ips_list.yml
+++ b/ips_list.yml
@@ -115,3 +115,8 @@ hwpe-mac-engine:
 riscv-dbg:
   commit: v0.2
   domain: [soc]
+wdt:
+  server: git@iis-git.ee.ethz.ch
+  group: balasr
+  commit: v0.1
+  domain: [soc]
